fix: 品目名の注釈内コードを品目名に置換
例: (2024年までは715を含む) → (2024年まではマスクを含む)

--- a/docs/品目一覧_2025年改定.md
+++ b/docs/品目一覧_2025年改定.md
@@ -1,23 +1,12 @@
 # 家計調査 2025年改定 品目一覧
 
 統計表ID: 0004023601
-品目数: 689
+品目数: 620
 
 ## 品目一覧
 
 | コード | 品目名 |
 |--------|--------|
-| 000100000 | 世帯数分布(抽出率調整) |
-| 000200000 | 集計世帯数 |
-| 000300000 | 世帯人員 |
-| 000400000 | 18歳未満人員 |
-| 000500000 | 65歳以上人員 |
-| 000600000 | 65歳以上無職者人員 |
-| 000700000 | 有業人員 |
-| 000800000 | 世帯主の年齢 |
-| 000900000 | 持家率 |
-| 001000000 | 家賃・地代を支払っている世帯の割合 |
-| 001100000 | 消費支出 |
 | 010000000 | 食料 |
 | 010100000 | 穀類 |
 | 010110001 | 米 |
@@ -38,7 +27,7 @@
 | 010140030 | 他の穀類のその他 |
 | 010200000 | 魚介類 |
 | 010210000 | 生鮮魚介 |
-| 010211000 | 170-189 鮮魚 |
+| 010211000 | 鮮魚 |
 | 010211010 | まぐろ |
 | 010211020 | あじ |
 | 010211030 | いわし |
@@ -55,7 +44,7 @@
 | 010211140 | かに |
 | 010211150 | 他の鮮魚 |
 | 010211160 | さしみ盛合わせ |
-| 010212000 | 190-194 貝類 |
+| 010212000 | 貝類 |
 | 010212010 | あさり |
 | 010212020 | しじみ |
 | 010212030 | かき(貝) |
@@ -101,7 +90,7 @@
 | 010430001 | 卵 |
 | 010500000 | 野菜・海藻 |
 | 010510000 | 生鮮野菜 |
-| 010511000 | 240-249 葉茎菜 |
+| 010511000 | 葉茎菜 |
 | 010511010 | キャベツ |
 | 010511020 | ほうれんそう |
 | 010511030 | はくさい |
@@ -110,7 +99,7 @@
 | 010511060 | ブロッコリー |
 | 010511070 | もやし |
 | 010511080 | 他の葉茎菜 |
-| 010512000 | 250-259,25X 根菜 |
+| 010512000 | 根菜 |
 | 010512010 | さつまいも |
 | 010512020 | じゃがいも |
 | 010512030 | さといも |
@@ -121,7 +110,7 @@
 | 010512080 | れんこん |
 | 010512090 | たけのこ |
 | 010512100 | 他の根菜 |
-| 010513000 | 260-269,26B,26X 他の野菜 |
+| 010513000 | 他の野菜 |
 | 010513010 | さやまめ |
 | 010513020 | かぼちゃ |
 | 010513030 | きゅうり |
@@ -129,9 +118,9 @@
 | 010513050 | トマト |
 | 010513060 | ピーマン |
 | 010513070 | 生しいたけ |
-| 010513080 | 26B しめじ |
+| 010513080 | しめじ |
 | 010513090 | えのきたけ |
-| 010513100 | 他のきのこ(2014年までは26B,26Xを含む) |
+| 010513100 | 他のきのこ(2014年まではしめじ、えのきたけを含む) |
 | 010513110 | 他の野菜のその他 |
 | 010520000 | 乾物・海藻 |
 | 010520010 | 豆類 |
@@ -212,8 +201,8 @@
 | 010900000 | 調理食品 |
 | 010910000 | 主食的調理食品 |
 | 010910010 | 弁当 |
-| 010910020 | 36A すし(弁当) |
-| 010910030 | 36B おにぎり・その他 |
+| 010910020 | すし(弁当) |
+| 010910030 | おにぎり・その他 |
 | 010910040 | 調理パン |
 | 010910050 | 他の主食的調理食品 |
 | 010920000 | 他の調理食品 |
@@ -243,10 +232,10 @@
 | 011030010 | 果実・野菜ジュース |
 | 011030020 | 炭酸飲料 |
 | 011030030 | 乳酸菌飲料 |
-| 011030040 | 38A 乳飲料 |
-| 011030050 | 38B ミネラルウォーター |
-| 011030060 | 38Y スポーツドリンク |
-| 011030070 | 他の飲料のその他(2014年までは38Yを含む) |
+| 011030040 | 乳飲料 |
+| 011030050 | ミネラルウォーター |
+| 011030060 | スポーツドリンク |
+| 011030070 | 他の飲料のその他(2014年まではスポーツドリンクを含む) |
 | 011100000 | 酒類 |
 | 011100010 | 清酒 |
 | 011100020 | 焼酎 |
@@ -255,19 +244,19 @@
 | 011100050 | ワイン |
 | 011100060 | 発泡酒 |
 | 011100070 | チューハイ・カクテル |
-| 011100080 | 他の酒(2014年までは3X8を含む) |
+| 011100080 | 他の酒(2014年まではチューハイ・カクテルを含む) |
 | 011200000 | 外食 |
 | 011210000 | 一般外食 |
-| 011211000 | 390-396,399,39A,39B 食事代 |
+| 011211000 | 食事代 |
 | 011211010 | 日本そば・うどん |
 | 011211020 | 中華そば |
 | 011211030 | 他の麺類外食 |
 | 011211040 | すし(外食) |
 | 011211050 | 和食 |
-| 011211060 | 39A 中華食 |
-| 011211070 | 洋食(2014年までは399を含む) |
+| 011211060 | 中華食 |
+| 011211070 | 洋食(2014年までは焼肉を含む) |
 | 011211080 | 焼肉 |
-| 011211090 | 39B ハンバーガー |
+| 011211090 | ハンバーガー |
 | 011211100 | 他の主食的外食 |
 | 011212010 | 喫茶代 |
 | 011212020 | 飲酒代 |
@@ -339,18 +328,18 @@
 | 040400060 | タオル |
 | 040400070 | 他の家事雑貨 |
 | 040500000 | 家事用消耗品 |
-| 040501000 | 531,532 ティッシュペーパー・トイレットペーパー |
+| 040501000 | ティッシュペーパー・トイレットペーパー |
 | 040501010 | ティッシュペーパー |
 | 040501020 | トイレットペーパー |
-| 040502000 | 533,534 洗剤 |
+| 040502000 | 洗剤 |
 | 040502010 | 台所・住居用洗剤 |
 | 040502020 | 洗濯用洗剤 |
-| 040503000 | 530,535-539 他の家事用消耗品 |
+| 040503000 | 他の家事用消耗品 |
 | 040503010 | ポリ袋・ラップ |
 | 040503020 | 殺虫・防虫剤 |
 | 040503030 | 柔軟仕上剤 |
 | 040503040 | 芳香・消臭剤 |
-| 040503050 | 他の家事用消耗品のその他(2014年までは536,537を含む) |
+| 040503050 | 他の家事用消耗品のその他(2014年までは柔軟仕上剤、芳香・消臭剤を含む) |
 | 040600000 | 家事サービス |
 | 040600010 | 家事代行料 |
 | 040600020 | 廃棄物処理手数料・リサイクル料金 |
@@ -409,8 +398,8 @@
 | 050600080 | 子供用靴下 |
 | 050600090 | 他の被服のその他 |
 | 050700000 | 履物類 |
-| 050700010 | 大人用運動靴(2019年までは676を一部含む) |
-| 050700020 | 大人用サンダル(2019年までは676を一部含む) |
+| 050700010 | 大人用運動靴(2019年までは子供用靴・サンダルを一部含む) |
+| 050700020 | 大人用サンダル(2019年までは子供用靴・サンダルを一部含む) |
 | 050700030 | 男性用靴 |
 | 050700040 | 女性用靴 |
 | 050700050 | 子供用靴・サンダル(2019年までは運動靴、サンダルを含まない) |
@@ -431,7 +420,7 @@
 | 060300000 | 保健医療用品・器具 |
 | 060300010 | 紙おむつ |
 | 060300060 | マスク |
-| 060300020 | 他の保健用消耗品(2024年までは715を含む) |
+| 060300020 | 他の保健用消耗品(2024年まではマスクを含む) |
 | 060300030 | 眼鏡 |
 | 060300040 | コンタクトレンズ |
 | 060300050 | 他の保健医療用品・器具 |
@@ -443,7 +432,7 @@
 | 060400050 | 整骨(接骨)・鍼灸院治療代 |
 | 060400060 | マッサージ料金等(診療外) |
 | 060400070 | 人間ドック等受診料 |
-| 060400080 | 他の保健医療サービス(2014年までは727を含む) |
+| 060400080 | 他の保健医療サービス(2014年までは人間ドック等受診料を含む) |
 | 070000000 | 交通・通信 |
 | 070100000 | 交通 |
 | 070100010 | 鉄道運賃 |
@@ -469,7 +458,7 @@
 | 070230050 | 自動車以外の輸送機器整備費 |
 | 070230060 | 年極・月極駐車場借料 |
 | 070230070 | 他の駐車場借料 |
-| 070230080 | 75B レンタカー・カーシェアリング料金 |
+| 070230080 | レンタカー・カーシェアリング料金 |
 | 070230090 | 他の自動車等関連サービス |
 | 070230100 | 自動車保険料(自賠責) |
 | 070230110 | 自動車保険料(任意) |
@@ -511,28 +500,28 @@
 | 090100100 | 他の教養娯楽用耐久財 |
 | 090100110 | 教養娯楽用耐久財修理代 |
 | 090200000 | 教養娯楽用品 |
-| 090201000 | 821-829 文房具 |
+| 090201000 | 文房具 |
 | 090201010 | 筆記・絵画用具 |
 | 090201030 | ノート・紙製品 |
 | 090201040 | 他の学習用消耗品 |
 | 090201050 | 他の学習用文房具 |
 | 090201060 | 他の文房具 |
-| 090202000 | 832-834 運動用具類 |
+| 090202000 | 運動用具類 |
 | 090202010 | ゴルフ用具 |
 | 090202020 | 他の運動用具 |
 | 090202030 | スポーツウェア |
-| 090203000 | 835-837 玩具 |
+| 090203000 | 玩具 |
 | 090203010 | ゲーム機 |
 | 090203150 | ゲームソフト等 |
 | 090203020 | 他の玩具 |
 | 090203060 | 切り花 |
-| 090204000 | 842,843,845-849,84A,84Y 他の教養娯楽用品 |
+| 090204000 | 他の教養娯楽用品 |
 | 090204010 | 音楽・映像用未使用メディア |
 | 090204020 | 音楽・映像収録済メディア |
 | 090204030 | ペットフード |
-| 090204040 | 84Y ペット・他のペット用品(2014年までは841を含む) |
-| 090204050 | 84A 園芸用植物 |
-| 090204060 | 園芸用品(2014年までは84Aを含む) |
+| 090204040 | ペット・他のペット用品(2014年までは他のペット関連サービスを含む) |
+| 090204050 | 園芸用植物 |
+| 090204060 | 園芸用品(2014年までは園芸用植物を含む) |
 | 090204070 | 手芸・工芸材料 |
 | 090204080 | 電池 |
 | 090204090 | 他の教養娯楽用品のその他 |
@@ -559,11 +548,11 @@
 | 090430070 | 家事月謝 |
 | 090430080 | 他の月謝類 |
 | 090440000 | 他の教養娯楽サービス |
-| 090441000 | 880,88A,88B 放送受信料 |
-| 090441010 | 88A NHK放送受信料 |
-| 090441020 | 88B ケーブルテレビ放送受信料 |
+| 090441000 | 放送受信料 |
+| 090441010 | NHK放送受信料 |
+| 090441020 | ケーブルテレビ放送受信料 |
 | 090441030 | 他の放送受信料 |
-| 090442000 | 877,878,881-886 入場・観覧・ゲーム代 |
+| 090442000 | 入場・観覧・ゲーム代 |
 | 090442010 | 映画・演劇等入場料 |
 | 090442020 | スポーツ観覧料 |
 | 090442030 | ゴルフプレー料金 |
@@ -575,7 +564,7 @@
 | 090442090 | 諸会費 |
 | 090442100 | 写真撮影・プリント代 |
 | 090442110 | 教養娯楽賃借料 |
-| 090442120 | 88Y インターネット接続料 |
+| 090442120 | インターネット接続料 |
 | 090442130 | 他の教養娯楽サービスのその他 |
 | 100000000 | その他の消費支出 |
 | 100100000 | 諸雑費 |
@@ -589,7 +578,7 @@
 | 100120010 | 理美容用電気器具 |
 | 100120020 | 歯ブラシ |
 | 100120030 | 他の理美容用品 |
-| 100121040 | 904-915 石けん類・化粧品 |
+| 100121040 | 石けん類・化粧品 |
 | 100121050 | 浴用・洗顔石けん |
 | 100121060 | シャンプー |
 | 100121070 | ヘアコンディショナー |
@@ -601,10 +590,10 @@
 | 100121130 | ファンデーション |
 | 100121140 | 口紅 |
 | 100121150 | ヘアカラーリング剤 |
-| 100120160 | 他の化粧品(2014年までは915を含む) |
+| 100120160 | 他の化粧品(2014年まではヘアカラーリング剤を含む) |
 | 100130000 | 身の回り用品 |
 | 100131010 | 傘 |
-| 100132000 | 924-927 かばん類 |
+| 100132000 | かばん類 |
 | 100132010 | ハンドバッグ |
 | 100132020 | 通学用かばん |
 | 100132030 | 旅行用かばん |
@@ -621,7 +610,7 @@
 | 100150040 | 葬儀関係費 |
 | 100150050 | 他の冠婚葬祭費 |
 | 100150060 | 医療保険料 |
-| 100150070 | 他の非貯蓄型保険料(2014年までは95Xを含む) |
+| 100150070 | 他の非貯蓄型保険料(2014年までは医療保険料を含む) |
 | 100150080 | 寄付金 |
 | 100150090 | 保育費用 |
 | 100150100 | 介護サービス |
@@ -638,61 +627,3 @@
 | 100400000 | 仕送り金 |
 | 100400010 | 国内遊学仕送り金 |
 | 100400020 | 他の仕送り金 |
-| 110000000 | 財・サービス支出計 |
-| 110100000 | 財(商品) |
-| 110100010 | 耐久財 |
-| 110100020 | 半耐久財 |
-| 110100030 | 非耐久財 |
-| 110200000 | サービス |
-| 110300000 |  食料(財・サービス) |
-| 110300010 | 非耐久財(食料) |
-| 110300020 | サービス(食料) |
-| 110400000 |  住居(財・サービス) |
-| 110400010 | 耐久財(住居) |
-| 110400020 | 半耐久財(住居) |
-| 110400030 | サービス(住居) |
-| 110500000 |  家具・家事用品(財・サービス) |
-| 110500010 | 耐久財(家具・家事用品) |
-| 110500020 | 半耐久財(家具・家事用品) |
-| 110500030 | 非耐久財(家具・家事用品) |
-| 110500040 | サービス(家具・家事用品) |
-| 110600000 |  被服及び履物(財・サービス) |
-| 110600010 | 半耐久財(被服及び履物) |
-| 110600020 | サービス(被服及び履物) |
-| 110700000 |  保健医療(財・サービス) |
-| 110700010 | 耐久財(保健医療) |
-| 110700020 | 半耐久財(保健医療) |
-| 110700030 | 非耐久財(保健医療) |
-| 110700040 | サービス(保健医療) |
-| 110800000 |  交通・通信(財・サービス) |
-| 110800010 | 耐久財(交通・通信) |
-| 110800020 | 半耐久財(交通・通信) |
-| 110800030 | 非耐久財(交通・通信) |
-| 110800040 | サービス(交通・通信) |
-| 110900000 |  教育(財・サービス) |
-| 110900010 | 非耐久財(教育) |
-| 110900020 | サービス(教育) |
-| 111000000 |  教養娯楽(財・サービス) |
-| 111000010 | 耐久財(教養娯楽) |
-| 111000020 | 半耐久財(教養娯楽) |
-| 111000030 | 非耐久財(教養娯楽) |
-| 111000040 | サービス(教養娯楽) |
-| 111100000 | 10･1  諸雑費(財・サービス) |
-| 111100010 | 耐久財(諸雑費) |
-| 111100020 | 半耐久財(諸雑費) |
-| 111100030 | 非耐久財(諸雑費) |
-| 111100040 | サービス(諸雑費) |
-| 120000001 | 調整集計世帯数 |
-| 130000000 | 教養娯楽関係費 |
-| 130100000 | 耐久財(教養娯楽関係費) |
-| 130200000 | 他の教養娯楽関係費 |
-| 130200010 | 読書 |
-| 130200020 | 聴視・観覧 |
-| 130200030 | 旅行 |
-| 130200040 | スポーツ |
-| 130200050 | 月謝 |
-| 130200060 | 会費・つきあい費 |
-| 130200070 | その他の教養娯楽 |
-| 140000000 | 消費支出(基礎・選択) |
-| 140100000 | 基礎的支出 |
-| 140200000 | 選択的支出 |
